# girls-side-analysis

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.dev  Dockerfile.nextjs  Dockerfile.nextjs.prod  README.md  TASKS.md  addTestData.ts  character-birthdays.md  compose.yaml  docker-build-production.sh  docker-compose.prod.build.yml  docker-compose.prod.yml  docker-compose.yml  next.config.mjs  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
.claude/skills/update-tasks/: SKILL.md
.github/workflows/: build-push.yml
db/: schema.ts
docs/: vote-aggregation-redesign.md
next/: Dockerfile.database-preparation  Dockerfile.nextjs  Dockerfile.nextjs.prod  docker-build-production.sh  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml
next/src/: auth.ts  middleware.ts  proxy.ts  types.ts
next/src/actions/: voteActions.ts
next/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
server/: .gitignore  Cargo.toml  openapi-generate.sh  openapi.yaml  sea-generate.sh
server-rs/src/: auth.rs  lib.rs  repositories.rs  services.rs
server-ts/: .gitignore  Dockerfile.seed  Dockerfile.server  Dockerfile.server.prod  addTestData.ts  backfillDailyOshiCount.ts  esbuild.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
server-ts/migrations/: 001_vote_aggregation_redesign.sql
server-ts/src/: app.ts  client.ts  index.ts  types.ts
server-ts/test/: globalSetup.ts
server/src/: db.rs  dto.rs  errors.rs  handlers.rs  lib.rs  main.rs  openapi.rs
server/src/entity/: characters.rs  mod.rs  user_states.rs  user_states_master.rs  votes.rs
src/: auth.ts  middleware.ts  types.ts
src/actions/: authActions.ts  voteActions.ts
src/app/: layout.tsx  page.tsx
src/components/: AddCharacterSelect.tsx  AfterLoginProfile.tsx  BeforeALoginProfile.tsx  Button.tsx  CharacterStrip.tsx  DataUsageDialog.tsx  GSButton.tsx  GSMessage.tsx  Header.tsx  HeaderProfileLink.tsx  LineChartClient.tsx  LogoutButton.tsx  ThemeChanger.tsx  TopAnalysis.tsx  TopAnalysisContent.tsx  TopCharacterSelect.tsx  TopCharacterSelectClient.tsx  VoteButton.tsx  VoteLink.tsx  VotingForm.tsx  VotingFormCharactersClient.tsx  VotingFormClient.tsx  VotingFormUserStatesClient.tsx  XShareLink.tsx
src/db/: index.ts  schema.ts
src/hooks/: useGarden.ts
src/lib/: characters.ts  users.ts  utils.ts  votes.ts
(+55 files in other folders)
