[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
sea-orm = { version = "1.1.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
sea-orm-cli = "1.1.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", default-features = false, features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "yaml", "chrono"] }
validator = { version = "0.20.0", features = ["derive"] }
