[package]
name = "server"
version = "0.1.0"
edition = "2024"
default-run = "server"


[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
sea-orm = { version = "1.1.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", default-features = false, features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "yaml", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features=["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
